Fixed header spacing in responsive

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -3,7 +3,7 @@
   background-size: cover;
   background-blend-mode: multiply;
   width: 100%;
-  height: 50vh;
+  height: 75vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -79,9 +79,5 @@
   .logoText {
     font-size: 4em;
     font-weight: bold;
-  }
-
-  .logoContainer {
-    margin-top: auto;
   }
 }
